src/test/error/class10.lns
{
   proto class AAA;
   class BBB extend AAA; // error
}
